--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!--<meta name="theme-color" content="#396471">-->
 
-<title>TYNY Architects</title>
+<title>TYNY Design</title>
 
 <link rel="stylesheet" href="css/main.css" type="text/css"/>
 
