--- a/index.html
+++ b/index.html
@@ -46,19 +46,7 @@ html {
 		
 		<a href="#About">About</a>  
 	
-		<a href="#HowtoJoin">Joining</a>  
-
-		<a href="#Board">Board</a>  
-
-		<a href="#PublicMembers">Members</a>  
-		
-		<a href="#Forum">Forum</a>  
-		
-		<a href="#Meetings">Meetings</a> 
-		
-		<a href="#Groups">Groups</a>  
-		
-		<a href="#Resources">Resources</a>
+		<a href="#Projects">Projects</a>  
 
 		<a href="#Contact">Contact&nbsp;/&nbsp;Privacy</a>
 		
